# school-management-system

./: .env  .env.example  .gitignore  Dockerfile  LICENSE  QUICK_START.md  README.md  app.py  docker-compose.yml  init-mongo.js  init_database.py  pyproject.toml  requirements.txt  run_app.bat  run_app.sh  run_init.bat  run_init.sh  setup.bat  setup.sh
.github/workflows/: ci-cd.yml
.streamlit/: config.toml
src/: __init__.py
src/auth/: __init__.py  authentication.py  authorization.py
src/config/: __init__.py  settings.py
src/database/: __init__.py  connection.py  models.py
src/ui/: __init__.py  dashboard.py  sidebar.py
src/utils/: __init__.py  email_service.py  helpers.py  notifications.py
tests/: __init__.py  conftest.py  test_authentication.py  test_models.py  test_settings.py
